--- a/app.json
+++ b/app.json
@@ -1,13 +1,12 @@
 {
   "pages": [
+    "testPage/test",
     "pages/index/index",
     "pages/orderList/orderList",
-    
     "pages/info/info",
-    
-   
     "pages/logs/logs",
     "pages/upload/upload"
+    
   ],
   "window": {
     "backgroundTextStyle": "light",
