rewrite ui to weui
rewrite ui to weui

--- a/app.json
+++ b/app.json
@@ -1,6 +1,8 @@
 {
   "pages": [
+    "pages/imageUpload/imageUpload",
     "pages/upload/upload",
+    
     "testPage/test",
     "pages/index/index",
     "pages/orderList/orderList",
